# vbpub

./: .env.sample  .gitignore  AGENTS.md  README.md  benchmark-optimal-config.sh  install-debian.json  requirements.txt  striping-matrix.json
ciu/: .gitignored.ciu  README.md  pyproject.toml
ciu/docs/: CIU-DEPLOY.md  CIU.md  CONFIG.md  README.md  SHARED-UTILS-REPORT.md
ciu/src/ciu/: __init__.py  __main__.py  cli.py  cli_utils.py  config_constants.py  deploy.py  engine.py  render_utils.py  workspace_env.py
ciu/src/ciu/hooks/: local_secrets_hook.py
ciu/src/ciu/tools/: __init__.py  test_config_structure.py
ciu/test-repo/: ciu-global.defaults.toml.j2
ciu/test-repo/applications/app-simple/: ciu.defaults.toml.j2  docker-compose.yml.j2
ciu/tests/tests/: README.md  test_ciu_auto_generate_values.py  test_ciu_cli_parser.py  test_ciu_dependency_checking.py  test_ciu_hooks_execution.py  test_ciu_hostdir_creation.py  test_ciu_registry_auth.py  test_ciu_reset_service.py  test_ciu_templates.py  test_ciu_test_repo.py  test_hook_interfaces.py
ciu/tools/: cleanup-and-validate.sh  cleanup-legacy-releases.sh  publish-and-validate.sh  publish-wheel-release.py  run-ciu-tests.sh  validate-and-publish.sh  validate-wheel-latest.py
playwright-mcp/: .env.sample  .gitignore  Dockerfile  README.md  build-images.sh  ciu-global.defaults.toml.j2  ciu.defaults.toml.j2  docker-bake.hcl  docker-compose.manual.yml  docker-compose.yml.j2  health_server.py  mcp_server.py  push-images.sh  pyproject.toml  release-and-upload.sh  release-stack-bundle.sh  requirements.root.txt  start_services.py  upload-release-assets.sh  usage-demo.py  ws_client.py  ws_server.py
playwright-mcp/docs/: ARCHITECTURE.md  CONFIG-EXAMPLES.md  DEPLOYMENT.md  SECURITY.md  USAGE.md
playwright-mcp/playwright_mcp_client/: __init__.py  cli.py  client.py
playwright-mcp/reverse-proxy/: nginx.conf.template
(+156 files in other folders)
