[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ciu"
dynamic = ["version"]
description = "CIU deployment CLI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "DST-DNS Team"}]

[tool.setuptools.dynamic]
version = {attr = "ciu.__version__"}

[project.scripts]
ciu = "ciu.cli:main"
ciu-deploy = "ciu.deploy:main"
